# numeric-integrate

./: .gitignore  CMakeLists.txt  main.cpp  numerical_integration.hpp  numerical_integration.tpp
